# fha-cpp

./: Dockerfile  README.md  makefile
.devcontainer/: devcontainer.json
muster/0x01/: sol_beverlyhollow.cpp  sol_bluecanyon.cpp  sol_pinepoint.cpp  sol_sanborncliff.cpp  sol_westrosecliff.cpp
muster/0x02/: sol_bakerriver.cpp  sol_elkford.cpp  sol_harshire.cpp
muster/0x03/: sol_luckyrock.cpp  sol_meadowriver.cpp  sol_ravencastle.cpp  sol_stoneridge.cpp
muster/0x04/: sol_ashfield.cpp  sol_bakeropolis.cpp  sol_brickgate.cpp  sol_hicksbluff.cpp  sol_oakberg.cpp  sol_sparrowtown.cpp
muster/0x05/: sol_copperview.cpp  sol_kengate.cpp  sol_mcallenspring.cpp
muster/0x06/: sol_birdsgale.cpp  sol_greenmound.cpp  sol_kenford.cpp  sol_reedsfield.cpp  sol_rosepond_v1.cpp  sol_rosepond_v2.cpp
muster/0x07/: sol_deerwoods.cpp  sol_dovertown.cpp  sol_heartland.cpp
muster/0x08/: sol_moorerock.cpp  sol_petersmines.cpp  sol_unionbeach_v1.cpp  sol_unionbeach_v2.cpp
muster/0x09/: sol_eastbourne.cpp  sol_openshaw.cpp  sol_wintervale.cpp
muster/0x0a/: sol_kreley.cpp  sol_pleim.cpp  sol_roarport.cpp  sol_yrouwood.cpp
muster/0x0b/: sol_coldwall.cpp  sol_deepbutter.cpp  sol_smoothrock.cpp  sol_westwheat.cpp  ts.h
snippets/0x00/: CMakeLists.txt  a_helloworld  a_helloworld.cpp  makefile
snippets/0x01/: CMakeLists.txt  a.out  a_console_io.cpp  b_primitives.cpp  c_strings.cpp  d_consts.cpp  e_arrays.cpp  f_if_for_while.cpp  g_functions.cpp  h_scope.cpp  sol_beverlyhollow.cpp  sol_bluecanyon.cpp  sol_pinepoint.cpp  sol_sanborncliff.cpp  sol_westrosecliff.cpp  work_for.cpp  work_int8.cpp  work_string.cpp  work_switch.cpp
snippets/0x02/: CMakeLists.txt  a_references.cpp  b_structs.cpp  c_call_by_ref.cpp  d_auto.cpp  e_exception.cpp  sol_bakerriver.cpp  sol_elkford.cpp  sol_harshire.cpp  work_stoi_stod.cpp  work_trailingreturn.cpp
snippets/0x03/: CMakeLists.txt  _Makefile  a_ctor_dtor.cpp  a_ctor_dtor_throw.cpp  b_getter_setter.cpp  c_const_getter.cpp  d_copyctor.cpp  e_class_address.cpp  f_class_address_best.cpp  sol_luckyrock.cpp  sol_meadowriver.cpp  sol_ravencastle.cpp  sol_stoneridge.cpp  work_class_car.cpp
snippets/0x04/: CMakeLists.txt  a_generics_01_vector.cpp  a_generics_02_pair_tuple.cpp  a_generics_03_container.cpp  a_generics_04_examples.cpp  b_iterators_01_examples_range_based_for.cpp  sol_ashfield.cpp  sol_bakeropolis.cpp  sol_brickgate.cpp  sol_hicksbluff.cpp  sol_oakberg.cpp  sol_sparrowtown.cpp
snippets/0x05/: CMakeLists.txt  _Makefile  a  a_asm_01_local_vars.cpp  a_asm_02_local_addr.cpp  a_asm_03_call_by.cpp  b  b_pointer_01_memory_layout.cpp  b_pointer_02_math.cpp  b_pointer_03_array.cpp  b_pointer_04_multiple_params.cpp  b_pointer_05_swap.cpp  b_pointer_06_addon.cpp  b_pointer_07_illegal.cpp  sol_copperview.cpp  sol_kengate.cpp  sol_mcallenspring.cpp
snippets/0x06/: CMakeLists.txt  a_new_01_new_delete.cpp  a_new_02_node.cpp  a_new_03_node_list.cpp  a_new_04_array.cpp  a_new_05_stack_example.cpp  a_new_06_unique_ptr.cpp  b_const_01_pointer.cpp  c_string_01_cstrings.cpp  c_string_02_class_example.cpp  sol_birdsgale.cpp  sol_greenmound.cpp  sol_kenford.cpp  sol_reedsfield.cpp  sol_rosepond_v1.cpp  sol_rosepond_v2.cpp  work_ptrptr.cpp  work_reserve.cpp
snippets/0x07/: CMakeLists.txt  a_lang_01_statics.cpp  a_lang_02_friend.cpp  b_op_01_address.cpp  b_op_02_assign.cpp  b_op_03_plus_global.cpp  b_op_04_plus_member.cpp  b_op_05_brackets.cpp  b_op_06_inc.cpp  b_op_07_io.cpp  sol_deerwoods.cpp  sol_dovertown.cpp  sol_heartland.cpp
snippets/0x08/: CMakeLists.txt  a_polymorphie_01_novirtual.cpp  a_polymorphie_02_virtual.cpp  a_polymorphie_03_ab.cpp  b_abstract_01_report.cpp  b_abstract_02_clone.cpp  c_multiple_01_simple.cpp  c_multiple_02_diamond.cpp  sol_moorerock.cpp  sol_petersmines.cpp  sol_unionbeach_v1.cpp  sol_unionbeach_v2.cpp  work_windows.cpp
snippets/0x09/: CMakeLists.txt  a_specialize_01_pair.cpp  a_specialize_02_type.cpp  a_specialize_03_vector.cpp  a_specialize_04_ispointer.cpp  a_specialize_05_metaprogramming.cpp  b_smartptr_01_sharedptr.cpp  b_smartptr_02_weakptr.cpp  sol_eastbourne.cpp  sol_openshaw.cpp  sol_wintervale.cpp  work_g_inverse.cpp
snippets/0x0a/: CMakeLists.txt  a_lambda_01_sort.cpp  a_lambda_02_simple.cpp  a_lambda_03_functions.cpp  a_lambda_04_trapez.cpp  b_algorithms_01_nonmod.cpp  b_algorithms_02_mod.cpp  b_algorithms_03_sort.cpp  b_algorithms_04_numeric.cpp  sol_kreley.cpp  sol_pleim.cpp  sol_roarport.cpp  sol_yrouwood.cpp
snippets/0x0b/: CMakeLists.txt  a_threads_01_two.cpp  a_threads_02_simple.cpp  a_threads_03_multiple.cpp  a_threads_04_array.cpp  a_threads_05_ref.cpp  b_mutex_01_lock.cpp  b_mutex_02_condition_var_nok.cpp  b_mutex_03_condition_var_ok.cpp  c_stream_01_file_io.cpp  c_stream_02_string_io.cpp  d_link_01_extern.cpp  d_link_01_extern.hpp  d_link_01_main.cpp  sixlines.txt  sol_coldwall.cpp  sol_deepbutter.cpp  sol_smoothrock.cpp  sol_westwheat.cpp  ts.h  work_fileptr_io.cpp  work_rlvalue.cpp
uebungen/0x01/: a.out  beverly_hollow  beverly_hollow.cpp  beverlyhollow  beverlyhollow.cpp  blue_canyon  blue_canyon.cpp  bluecanyon  bluecanyon.cpp  pine_point  pine_point.cpp  pinepoint.cpp  sanborn_cliff  sanborn_cliff.cpp  sanborncliff  sanborncliff.cpp  west_rose_cliff  west_rose_cliff.cpp  westrosecliff  westrosecliff.cpp
uebungen/0x02/: baker_river  baker_river.cpp  bakerriver.cpp  elkford.cpp  harkshire.cpp
uebungen/0x03/: luckyrock.cpp  meadowriver.cpp  ravencastle.cpp  stoneridge.cpp
uebungen/0x04/: a.out  ashfield  ashfield.cpp  bakeropolis.cpp  brickgate  brickgate.cpp  hicks_bluff  hicks_bluff.cpp  hicksbluff.cpp  oakberg  oakberg.cpp  sparrow_town.cpp  sparrowtown.cpp
uebungen/0x05/: a.out  copper_view  copper_view.cpp  copperview.cpp  kengate  kengate.cpp  mcallen_spring  mcallen_spring.cpp  mcallenspring.cpp
uebungen/0x06/: greenmound.cpp  kenford.cpp  reedsfield.cpp  rosepond.cpp  southbirdsgale.cpp
uebungen/0x07/: deerwoods.cpp  dovertown.cpp  heartland.cpp
uebungen/0x08/: moorerock.cpp  petersmines.cpp  unionbeach.cpp
uebungen/0x09/: banrockburn.cpp  eastbourne.cpp  openshaw.cpp  wintervale.cpp
(+10 files in other folders)
