cmake_minimum_required(VERSION 3.15)
project(clion)

set(CMAKE_CXX_STANDARD 20)

add_executable(a_console_io a_console_io.cpp)
add_executable(b_primitives b_primitives.cpp)
add_executable(c_strings c_strings)
add_executable(d_consts d_consts)
add_executable(e_arrays e_arrays)
add_executable(f_if_for_while f_if_for_while)
add_executable(g_functions g_functions)
add_executable(h_scope h_scope)

add_executable(work_for.cpp work_for.cpp)
add_executable(work_int8.cpp work_int8.cpp)
add_executable(work_string.cpp work_string.cpp)
add_executable(work_switch.cpp work_switch.cpp)

add_executable(sol_beverlyhollow.cpp sol_beverlyhollow.cpp)
add_executable(sol_bluecanyon.cpp sol_bluecanyon.cpp)
add_executable(sol_pinepoint.cpp sol_pinepoint.cpp)
add_executable(sol_sanborncliff.cpp sol_sanborncliff.cpp)
add_executable(sol_westrosecliff.cpp sol_westrosecliff.cpp)
