cmake_minimum_required(VERSION 3.15)
project(clion)

set(CMAKE_CXX_STANDARD 20)

add_executable(a_generics_01_vector a_generics_01_vector)
add_executable(a_generics_02_pair_tuple a_generics_02_pair_tuple)
add_executable(a_generics_03_container a_generics_03_container)
add_executable(a_generics_04_examples a_generics_04_examples)

add_executable(b_iterators_01_examples_range_based_for b_iterators_01_examples_range_based_for)

add_executable(sol_ashfield sol_ashfield)
add_executable(sol_bakeropolis sol_bakeropolis)
add_executable(sol_brickgate sol_brickgate)
add_executable(sol_hicksbluff sol_hicksbluff)
add_executable(sol_oakberg sol_oakberg)
add_executable(sol_sparrowtown sol_sparrowtown)
