cmake_minimum_required(VERSION 3.15)
project(clion)

set(CMAKE_CXX_STANDARD 20)
add_executable(a_new_01_new_delete a_new_01_new_delete)
add_executable(a_new_02_node a_new_02_node)
add_executable(a_new_03_node_list a_new_03_node_list)
add_executable(a_new_04_array a_new_04_array)
add_executable(a_new_05_stack_example a_new_05_stack_example)
add_executable(a_new_06_unique_ptr a_new_06_unique_ptr)
add_executable(b_const_01_pointer b_const_01_pointer)
add_executable(c_string_01_cstrings c_string_01_cstrings)
add_executable(c_string_02_class_example c_string_02_class_example)

add_executable(sol_birdsgale sol_birdsgale)
add_executable(sol_greenmound sol_greenmound)
add_executable(sol_kenford sol_kenford)
add_executable(sol_reedsfield sol_reedsfield)
add_executable(sol_rosepond_v1 sol_rosepond_v1)
add_executable(sol_rosepond_v2 sol_rosepond_v2)
