cmake_minimum_required(VERSION 3.15)
project(clion)

set(CMAKE_CXX_STANDARD 20)
add_executable(a_lambda_01_sort a_lambda_01_sort)
add_executable(a_lambda_02_simple a_lambda_02_simple)
add_executable(a_lambda_03_functions a_lambda_03_functions)
add_executable(a_lambda_04_trapez a_lambda_04_trapez)
add_executable(b_algorithms_01_nonmod b_algorithms_01_nonmod)
add_executable(b_algorithms_02_mod.cpp b_algorithms_02_mod)
add_executable(b_algorithms_03_sort b_algorithms_03_sort)
add_executable(b_algorithms_04_numeric b_algorithms_04_numeric)

add_executable(sol_kreley sol_kreley)
add_executable(sol_pleim sol_pleim)
add_executable(sol_roarport sol_roarport)
add_executable(sol_yrouwood sol_yrouwood)

